Initialized create terminal and test
